2013-06-10  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (get_it_property): Use it->window instead of generating
	a Lisp object from it->w.

2013-06-09  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (get_it_property): If it->object is a buffer, pass to
	get-char-property the window that is being rendered, instead of
	the buffer, to support window-specific overlays.  (Bug#14575)
	(compute_display_string_pos): When W is NULL, use the current
	buffer as the object to pass to get-char-property.
	(Fcurrent_bidi_paragraph_direction): Assign NULL to the window
	pointer member of the bidi iterator, since no window is pertinent
	to this function.

2013-06-08  Eli Zaretskii  <eliz@gnu.org>

	* bidi.c (bidi_fetch_char): Accept additional argument, the window
	being displayed, and pass it to compute_display_string_pos.
	(bidi_level_of_next_char, bidi_resolve_explicit_1)
	(bidi_paragraph_init): All callers changed.

	* xdisp.c (init_from_display_pos, init_iterator)
	(handle_single_display_spec, next_overlay_string)
	(get_overlay_strings_1, reseat_1, reseat_to_string)
	(push_prefix_prop, Fcurrent_bidi_paragraph_direction):
	Set bidi_it.w member from it->w.
	(compute_display_string_pos): Accept additional argument, the
	window being displayed, and pass it to Fget_char_property.
	(Bug#14575)

	* dispextern.h (struct bidi_it): New member w, the window being
	displayed.
	(compute_display_string_pos): Adjust prototype.

2013-06-08  Jan Djärv  <jan.h.d@swipnet.se>

	* xgselect.c: Remove unneeded include xterm.h.

	* process.c (wait_reading_process_output): Check for NS before GLIB.
	GLIB may be linked in due to rsvg, but ns_select must be called.

	* xgselect.c (xg_select): Remove call to window_system_available
	and g_main_context_pending at the top, so Gdk events (i.e. file
	notify) are processed when Emacs is started with -nw.

2013-06-07  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (ctagsfiles1, ctagsfiles2): Don't include *.m files.